force-app/main/default/objects/Global_Status__mdt/Global_Status__mdt.object-meta.xml
<CustomObject>
    <description>Pares de códigos de estado con diferentes contextos para su reutilización</description>
    <label>Global Status</label>
    <pluralLabel>Global Status</pluralLabel>
</CustomObject>