force-app/main/default/objects/Global_Status__mdt/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <label>Status Code</label>
    <length>124</length>
    <type>Text</type>
</CustomField>