force-app/main/default/objects/Global_Status__mdt/fields/Status_Label__c.field-meta.xml
<CustomField>
    <fullName>Status_Label__c</fullName>
    <label>Status Label</label>
    <length>124</length>
    <type>Text</type>
</CustomField>